[project]
name = "sheelon"
version = "0.2.0"
description = "Presentation of the well-being questionnaire data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "datasette>=0.65.1",
    "datasette-auth-passwords>=1.1.1",
    "datasette-dashboards>=0.7.0",
    "datasette-render-markdown>=2.2.1",
    "datasette-vega>=0.6.2",
    "pysqlite3-binary>=0.5.4",
    "sqlite-utils>=3.38",
    # More Datasette plugins here:
    #   https://datasette.io/plugins
    # Noteworthy:
    # - datasette-cluster-map: Plot latitude/longitude on a map
]

[tool.uv.sources]
datasette-dashboards = { git = "https://github.com/shaib/datasette-dashboards.git", rev = "issue_288_markdown_config" }
